--- a/car_price.ipynb
+++ b/car_price.ipynb
@@ -797,6 +797,12 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
